User info already showing up

--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=15432;Database=es2;Username=es2;Password=es2"
+    "DefaultConnection": "Host=localhost;Port=5432;Database=es2;Username=postgres;Password=1234"
   }
 }
