--- a/WebAPI/appsettings.Development.json
+++ b/WebAPI/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=15432;Database=es2;Username=es2;Password=es2"
+    "DefaultConnection": "Host=localhost;Port=5432;Database=es2;Username=postgres;Password=1234"
   }
 }
