--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 POSTGRES_DB=es2
-POSTGRES_USER=postgres
-POSTGRES_PASSWORD=1234
-POSTGRES_PORT=5432
+POSTGRES_USER=es2
+POSTGRES_PASSWORD=es2
+POSTGRES_PORT=15432
 POSTGRES_HOST=localhost
 API_URL=http://localhost:5295/
