feature(login): save JwtToken during login

--- a/WebAPI/appsettings.Development.json
+++ b/WebAPI/appsettings.Development.json
@@ -1,4 +1,9 @@
 {
+  "Jwt": {
+    "Key":      "uma-chave-muito-complexa-e-secreta-para-es2-2025",
+    "Issuer":   "servidor",
+    "Audience": "clientes"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
